testcrate/tests/ui/sql_table_expr.stderr
warning: No primary key found
  --> $DIR/sql_table_expr.rs:41:8
   |
41 | struct Table {
   |        ^^^^^

error[E0277]: the trait bound `Connection: tql::SqlTable` is not satisfied
  --> $DIR/sql_table_expr.rs:44:32
   |
44 |     related_field1: ForeignKey<Connection>,
   |                                ^^^^^^^^^^ the trait `tql::SqlTable` is not implemented for `Connection`
   |
   = note: required by `tql::SqlTable`

error: aborting due to previous error

